--- a/repo/neo-config-dev.properties
+++ b/repo/neo-config-dev.properties
@@ -1,1 +1,1 @@
-neo.hello=hello im dev update by csfrez 2018.08.27 15:14 haha haha
+neo.hello=hello im dev update by csfrez 2018.08.27 15:14 haha haha haha
